--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
         "babel-plugin-styled-components": "1.10.7",
         "react-helmet": "^6.1.0",
         "react": "^16.13.0",
+        "airtable": "latest",
+        "@quarkly/atomize": "1.0.8",
         "@quarkly/components": "0.2.42",
         "@quarkly/widgets": "0.2.40",
         "react-dom": "^16.13.0",
-        "@quarkly/atomize": "1.0.8",
         "styled-components": "^5.0.1",
         "react-router-dom": "^5.1.2",
         "react-router-hash-link": "^1.2.2",
